force-app/main/default/objects/Account/fields/Amazon_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Discount__c</fullName>
    <formula>$Setup.AmazonDiscount__c.Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amazon Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>