force-app/main/default/objects/Account/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>abc</fullName>
            </value>
            <value>
                <fullName>xyz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>