force-app/main/default/objects/Account/fields/Customer_Priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_Priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer_Priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>