force-app/main/default/objects/Account/fields/Marketing_priority__c.field-meta.xml
<CustomField>
    <fullName>Marketing_priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing_priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>