force-app/main/default/objects/Account/fields/My_Date__c.field-meta.xml
<CustomField>
    <fullName>My_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>My Date</label>
    <type>DateTime</type>
</CustomField>