force-app/main/default/objects/Account/fields/sales_priority__c.field-meta.xml
<CustomField>
    <fullName>sales_priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>sales priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>