force-app/main/default/objects/Account/fields/stageName__c.field-meta.xml
<CustomField>
    <fullName>stageName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>stageName</label>
    <type>Date</type>
</CustomField>