force-app/main/default/objects/Account/fields/store__c.field-meta.xml
<CustomField>
    <fullName>store__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>store</label>
    <length>100</length>
    <type>Text</type>
</CustomField>