force-app/main/default/objects/Account/fields/Support_Plan_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Plan_Expiration_Date__c</fullName>
    <description>Expiration date of current support plan</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When is the current support plan due for renewal?</inlineHelpText>
    <label>Support Plan Expiration Date</label>
    <type>Date</type>
</CustomField>