force-app/main/default/objects/Account/fields/Total_Contact_price__c.field-meta.xml
<CustomField>
    <fullName>Total_Contact_price__c</fullName>
    <label>Total Contact price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>