force-app/main/default/objects/Account/fields/updateaccount__c.field-meta.xml
<CustomField>
    <fullName>updateaccount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>updateaccount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>