force-app/main/default/objects/Account/recordTypes/Demorecord.recordType-meta.xml
<RecordType>
    <fullName>Demorecord</fullName>
    <active>true</active>
    <label>Demorecord</label>
</RecordType>