force-app/main/default/objects/Account/recordTypes/English_chat_queues.recordType-meta.xml
<RecordType>
    <fullName>English_chat_queues</fullName>
    <active>true</active>
    <label>English chat queues</label>
</RecordType>