force-app/main/default/objects/Account/listViews/All_Account.listView-meta.xml
<ListView>
    <fullName>All_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.IS_PARNTER</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Account</label>
</ListView>