force-app/main/default/objects/Account/listViews/Copy_of_All_Accounts.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>Copy of All Accounts</label>
    <sharedTo>
        <group>test_groups_case_email_alert</group>
    </sharedTo>
</ListView>